# pymusepipe

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  HOWTO.txt  LICENSE.txt  README.md  README.rst  align_pipe_SV.py  requirements.txt  setup.cfg  setup.py  tmp1.txt
.spyproject/: workspace.ini
config_templates/: calib_tables.dic  rc.dic
docs/: Makefile  alignment.rst  conf.py  convolution.rst  getting_started.rst  howto.rst  install.rst  mosaicking.rst
docs/api/: pymusepipe.rst
docs/source/: alignment.rst  conf.py  index.rst  modules.rst  mosaicking.rst  phangs_example.rst  reduce_to_prealign.rst
pymusepipe/: .__init__.py.swp  .check_pipe.py.swp  .combine.py.swp  .create_sof.py.swp  .dates.swp  .emission_lines.py.swp  .graph_musepipe.py.swp  .graph_pipe.py.swp  .init_musepipe.py.swp  .mpdaf_pipe.py.swp  .muse_alignment.py.swp  .musepipe.py.swp  .recipes_pipe.py.swp  ;  \  ]  __init__.py  align_pipe.py  align_pipe.py_good  align_pipe_FS.py  align_pipe_montage.py_old  check_pipe.py  combine.py  config_pipe.py  create_sof.py  cube_convolve.py  dates  emission_lines.py  graph_pipe.py  graphcheck_pipe.py  init_musepipe.py  mpdaf_pipe.py  muse_alignment.py  musepipe.py  old.py  old_mpdaf_pipe.old  prep_recipes_pipe.py  recipes_pipe.py  target_sample.py  util_config.py  (+2 more)
src/pymusepipe/: __init__.py  align_pipe.py  check_pipe.py  combine.py  config_pipe.py  create_sof.py  cube_convolve.py  emission_lines.py  graph_pipe.py  init_musepipe.py  mpdaf_pipe.py  musepipe.py  prep_recipes_pipe.py  (+5 more)
src/pymusepipe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+7 files in other folders)
