# Inside of setup.cfg
[metadata]
name = pymusepipe
description-file = Wrapper around MUSE software to reduce MUSE data
author = Eric Emsellem
author-email = eric.emsellem@eso.org
license = mit
long-description = file: README.md
long-description-content-type = text/x-md; charset=UTF-8

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[aliases]
dists = bdist_wheel

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py